fitness-and-health-website/stylesheet.css
html, body{
    margin: 0;
    padding: 0;
    overflow-x: hidden !important;
    overflow-y: auto;
    background-color: #121212;
}
.index{
    background-size: cover;
}

* {
    box-sizing: border-box;
}



.vertikalLine{
    width: 3px;
    height: 100%;
    margin: 0px 10px;
    background-color: yellow;

}
.costum-container{
    display: flex;
    align-items: center;
    height: 50px;

}
.MainPage.picture{
    max-width: 100%;

}
.images{

    padding: 150px;
    position: relative;
    overflow: hidden;


}
.MainPage{
    display: flex;
    flex-direction: column;

}

.headersTop{
    color: yellow;
    font-weight: bold;
    font-family: Arial, serif;
    font-style: normal;
    text-decoration: underline;
    font-size: 50px;
}

.svg{

    width: 80px;
    height: 80px;


}


.horizontalYellowLine{
    width: 100%;
    height: 1px;
    background-color: yellow;
}





#headlinetrans{
    position: relative;
    overflow: hidden;
    height: 20vh;
    width: 100%;
    font-family: Arial, sans-serif;
}

.headLine {

    padding-top: 8%;
    text-align: center;
    color: yellow;
    text-shadow: 2px 2px 5px rgba(204, 153, 0, 0.8);
    text-transform: uppercase;
    font-size: 300%;
    font-weight: bold;

    <!--animation: flyIn 2s ease-out forwards;-->
}

@keyframes flyIn {
    0% {
        left: -100%;
        opacity: 0;
    }
    50% {
        opacity: 1;
    }
    100% {
        left: 50%;
        opacity: 1;
        transform: translate(-50%, -50%);
    }
}

.quote2{
    position: absolute;
    left: -100%;
    text-align: center;
    color: whitesmoke;
    overflow: hidden;
    white-space: nowrap;
    text-transform: uppercase;
    transform: translateX(0);
    font-family: "Georgia";

}

.quote3{
    position: absolute;
    right: -100%;
    margin-top: 5%;

    color: whitesmoke;
    overflow: hidden;
    transform: translateX(0);
    white-space: nowrap;
    text-transform: uppercase;
    font-family: "Georgia";


}
.quote4{
    position: absolute;
    left: -100%;
    margin-top: 10%;
    transform: translateX(0);
    color: whitesmoke;
    overflow: hidden;
    white-space: nowrap;
    text-transform: uppercase;
    font-family: "Georgia";

}

.quote5{
    position: absolute;
    right: -100%;
    margin-top: 15%;
    overflow: hidden;
    white-space: nowrap;
    color: whitesmoke;
    transform: translateX(0);
    text-transform: uppercase;
    font-family: "Georgia";

}

.quotes{
    display: flex;
    flex-direction: column;
    align-items: center;

}

@keyframes flyInFromRight {
    0%{
        right: -100%;
        opacity: 0;
    }
    3%,20% {
        right: 50%;
        opacity: 1;
        transform: translateX(50%);
    }
    22%,100% {
        right: 150%;
        opacity: 0;
        transform: translateX(50%);
    }
}
@keyframes flyInFromLeft {
    0% {
        left: -100%;
        opacity: 0;
    }
    3%,20% {
        left: 50%;
        opacity: 1;
        transform: translateX(-50%);
    }

    22%,100% {
        left: 150%;
        opacity: 0;
        transform: translateX(-50%);
    }

}


.set1.quote2 { animation: flyInFromLeft 72s linear infinite ; animation-delay: 0s; }
.set1.quote3 { animation: flyInFromRight 72s linear infinite; animation-delay: 1s; }
.set1.quote4 { animation: flyInFromLeft 72s linear infinite; animation-delay: 2s; }
.set1.quote5 { animation: flyInFromRight 72s linear infinite; animation-delay: 3s; }


.set2.quote2 { animation: flyInFromLeft 72s linear infinite; animation-delay: 18s; }
.set2.quote3 { animation: flyInFromRight 72s linear infinite; animation-delay: 19s; }
.set2.quote4 { animation: flyInFromLeft 72s linear infinite; animation-delay: 20s; }
.set2.quote5 { animation: flyInFromRight 72s linear infinite; animation-delay: 21s; }


.set3.quote2 { animation: flyInFromLeft 72s linear infinite; animation-delay: 36s; }
.set3.quote3 { animation: flyInFromRight 72s linear infinite; animation-delay: 37s; }
.set3.quote4 { animation: flyInFromLeft 72s linear infinite; animation-delay: 38s; }
.set3.quote5 { animation: flyInFromRight 72s linear infinite; animation-delay: 39s; }


.set4.quote2 { animation: flyInFromLeft 72s linear infinite; animation-delay: 54s; }
.set4.quote3 { animation: flyInFromRight 72s linear infinite; animation-delay: 55s; }
.set4.quote4 { animation: flyInFromLeft 72s linear infinite; animation-delay: 56s; }
.set4.quote5 { animation: flyInFromRight 72s linear infinite; animation-delay: 57s; }




.borderStyle
{
    border: 5px solid lightgrey;
    border-radius: 10px;
    border-collapse: collapse;
}


.homeButtonWrapper {
    width: 20px;
    height: 20px;
    display: inline-block;
    position: relative;
}

.homeButton {
    background-image: url("icones/iconizer-bxs-home.svg");
    padding: 20px;
    margin: 10px;
    background-repeat: no-repeat;
    background-color: black;
    border-style: hidden;
    background-size: contain;

}



.homeButton:hover {
    transition: background-color 0.75s ease, color 1s ease;
    background-image: url("icones/bxs-home.svg");
    background-color: yellow;
    background-repeat: no-repeat;
}

.pictureContainer{
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    position: relative;
    animation: occor 3s linear;
}
.pictureOfMan{
    margin-top: 20%;
    max-width: 150%;
    height: 100%;
    width: 100%;
    border-radius: 10px;
    opacity: 0.7;

}
.h2onSite{
    position: absolute;
    top: 20%;
    font-size: 200%;

}

@keyframes occor {
    0%{
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}



table#tableInMain
{
    background-color: black;
    width: 100%;
    margin-top: 10%;
}
p#\@InTableInMain
{
    color: white;
    font-weight: bold;
    font-family: Calibri, serif;
    font-size: larger;
}
p.normalTextInTableInMain
{
    color: yellow;
    font-family: Calibri, serif;
    font-size: large;
    padding: 0px;
    margin: 0px;
    transition: color 1s;
}

p.normalTextInTableInMain:hover
{
    color: white;
    animation: 3s changeColorAndSize forwards;
}

@keyframes changeColorAndSize {
    from
    {

        font-size: larger;
    }
    to
    {

        font-size: larger;
    }
}

td.tdInMain
{
    margin: 0px;
    padding: 0px;
}

a.styleForEmailInMain
{
    color: yellow;
    font-family: Calibri, serif;
    text-decoration: none;
    transition: color 1s;
}

a.styleForEmailInMain:hover
{
    color: white;
    animation: 3s changeColorAndSize infinite;
}


.pictureContainer{
    display: flex;
    animation: occor 3s linear;

}
.navbar {
    background-color: #333333; /* Dunkles Grau */
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Leichter Schatten */
    margin-bottom: 20%;
}

.navbar-nav .nav-link img {
    filter: invert(1); /* Macht schwarze Icons weiß, sodass sie sichtbar sind */
}

.navbar-fixed {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 1000; /* Priorität vor anderen Elementen */
}
.pictureOfMan{
    margin-top: 20%;
    width: 45%;
    left: 50%;
    border-radius: 30% 70% 70% 30% / 30% 22% 78% 70%;
    opacity: 0.8;

    transition: transform 1s ease, box-shadow 1s ease, border-radius 1s ease;
    box-shadow: 0 4px 15px black;
}

.pictureOfMan:hover{
    transform: scale(1.1);
}
.h2onSite{
    margin-bottom: 1%;
    font-family: Georgia;
    font-size: 2rem;
    font-weight: bold;
    text-shadow: 2px 2px 4px black;
}
.h2onSite:hover {
    color: yellow;
    font-size: 2.01rem;
}
.textContent{
    display: flex;
    flex-direction: column;
    margin-top: 23%;
    border: 1px solid black;
    margin-left: 5%;
    margin-right: 3%;
    padding: 1%;
    background-color: darkgray;
    border-radius: 20px;
    overflow: visible;
    word-wrap: break-word;
    animation: fadeIn 3s ease;

}
.h2Box{
    display: inline-block;
    margin-bottom: 10%;
    position: relative;
}
@keyframes occor {
    0%{
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
.textForWebsite{
    font-size: 150%;
    margin: 0;
    line-height: 1.5;
}
@keyframes fadeIn {
    0% { opacity: 0; transform: translateY(50%); }
    100% { opacity: 1; transform: translateY(0)}
}

